--- a/frontend/app/config.json
+++ b/frontend/app/config.json
@@ -1,6 +1,6 @@
 {
     "backend": 
     {
-        "restServiceUrl": "https://trainme-restful-service.com:3232"
+        "restServiceUrl": "http://localhost:3000"
     }
 }
